google sign in working
funciona bien, no da errores ni problemas.

--- a/LostPet/Info.plist
+++ b/LostPet/Info.plist
@@ -15,5 +15,7 @@
 			</array>
 		</dict>
 	</array>
+	<key>GIDClientID</key>
+	<string>1029513619234-a86s1ae5gqurkcjbrliqf573880ckeah.apps.googleusercontent.com</string>
 </dict>
 </plist>
